fix items size and spacing for mobile header

--- a/css/responsive/tablet.styl
+++ b/css/responsive/tablet.styl
@@ -32,6 +32,13 @@ $margin-large = ($gutter * 5)
 
 // ******************************************************
 
+// TYPOGRAPHY 
+
+.font-nav 
+  font-size: 11px  
+  
+// ******************************************************
+
 // BASIC
 
 $header-height = 65px
@@ -139,7 +146,7 @@ $footer-height = 44px
   text-align: left
   
 .menu-item
-  margin-right: $margin-tiny
+  margin-right: $margin-small
 
 .editorial-title
   text-align: right
