--- a/css/site.styl
+++ b/css/site.styl
@@ -157,7 +157,7 @@ h1,h2,h3,h4,h5
   margin: 0
   
 .font-nav 
-  font-size: 11px   
+  font-size: 9px   
   font-family: "Montserrat", font-stack('Helvetica')
   font-style: normal 
   font-weight: normal
@@ -487,7 +487,7 @@ a.button-shop,
 // HEADER
 
 .menu-item
-  margin-right: $margin-small
+  margin-right: $margin-tiny
   &:last-of-type
     margin-right: 0
   a:hover, &.active
@@ -499,7 +499,7 @@ a.button-shop,
   justify-content: center
   align-items: center
   img
-    width: $margin-small
+    width: 16px
     height: auto
     margin-right: $margin-micro
 
